<resources>
    <string name="app__name">에어시그널</string>
    <string name="setting_title">앱 설정</string>
    <string name="setting_account">계정</string>
    <string name="setting_theme_left">테마 설정</string>
    <string name="setting_lang">언어 설정</string>
    <string name="setting_notify">알림</string>
    <string name="set_noti">알림 설정</string>
    <string name="setting_customer_service">정보</string>
    <string name="setting_notice">공지사항</string>
    <string name="setting_app_data">앱 정보</string>
    <string name="setting_logout">로그아웃</string>
    <string name="login_title">로그인</string>
    <string name="theme_light">라이트 테마</string>
    <string name="theme_dark">다크 테마</string>
    <string name="please_login">로그인 해주세요</string>
    <string name="english">English</string>
    <string name="korean">한국어</string>
    <string name="system_lang">시스템 언어</string>
    <string name="weather">날씨 정보</string>
    <string name="save_change">설정을 저장하였습니다.\n앱을 다시 시작합니다</string>
    <string name="ok">확인</string>
    <string name="theme_system">시스템 테마</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wen">수</string>
    <string name="thr">목</string>
    <string name="fir">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>
    <string name="back_press">버튼을 한번 더 누르면 앱이 종료됩니다</string>
    <string name="allowed_noti">설정을 허용하였습니다</string>
    <string name="denied_noti">설정을 거부하였습니다</string>
    <string name="hour">시</string>
    <string name="system">시스템</string>
    <string name="live_air_quality">실시간 공기질</string>
    <string name="uv_title">자외선 지수</string>
    <string name="how_to_response_title">단계별 대응요령</string>
    <string name="sunrise">일출</string>
    <string name="sunset">일몰</string>
    <string name="tomorrow">내일</string>
    <string name="weekly_weather">주간별 날씨</string>
    <string name="daily_weather">시간별 날씨</string>
    <string name="font_small">작게</string>
    <string name="font_large">크게</string>
    <string name="font_normal">기본</string>
    <string name="uv_low">낮음</string>
    <string name="uv_normal">보통</string>
    <string name="uv_high">높음</string>
    <string name="uv_very_high">매우높음</string>
    <string name="uv_caution">위험</string>
    <string name="slide_more">날씨 정보 더보기</string>
    <string name="sky_sunny">맑음</string>
    <string name="sky_sunny_cloudy">구름많음</string>
    <string name="sky_cloudy">흐림</string>
    <string name="sky_shower">소나기</string>
    <string name="sky_rainy">비</string>
    <string name="sky_sunny_cloudy_snowy">구름많고 눈</string>
    <string name="sky_snowy">눈</string>
    <string name="sky_cloudy_snowy">흐리고 눈</string>
    <string name="sky_sunny_cloudy_shower">구름많고 소나기</string>
    <string name="sky_sunny_cloudy_rainy">구름많고 비</string>
    <string name="sky_cloudy_rainy">흐리고 비</string>
    <string name="sky_cloudy_shower">흐리고 소나기</string>
    <string name="sky_sunny_cloudy_rainy_snowy">구름많고 비/눈</string>
    <string name="sky_cloudy_rainy_snowy">흐리고 비/눈</string>
    <string name="sky_rainy_snowy">비/눈</string>
    <string name="date">요일</string>
    <string name="today">오늘</string>
    <string name="today_main">오늘</string>
    <string name="min_max">최저/최고</string>
    <string name="similar_temp">어제와 기온이 비슷해요</string>
    <string name="font_scale">폰트 크기 설정</string>
    <string name="thunder_sunny">번개,뇌우</string>
    <string name="thunder_rainy">비/번개</string>
    <string name="app_version">앱 버전</string>
    <string name="location_perm">위치 권한</string>
    <string name="loc_perm_explain">·현재 위치 날씨 데이터 제공</string>
    <string name="non_essential_perm">선택 권한</string>
    <string name="essential_perm">필수 권한</string>
    <string name="noti_perm">알림 권한</string>
    <string name="noti_perm_explain">·날씨 및 미세먼지 정보 알림 제공\n·이벤트 및 업데이트에 관련된 정보 제공</string>
    <string name="perm_notice">권한을 허용하지 않아도 이용은 가능하지만 일부 서비스가 제한 될 수 있습니다.</string>
    <string name="perm_title">앱 사용을 위해\n 접근 권한을 허용해주세요</string>
    <string name="not_serviced_location_error">서비스 가능한 지역이 아닙니다\n버튼을 클릭하여 새 주소를 등록하세요</string>
    <string name="airq_question_pm2p5">PM2.5는1000분의 2.5mm보다 작은 먼지로, 머리카락 직경(약 60㎛)의 1/20~1/30 크기보다 작은 입자이다. 미세먼지는 공기 중 고체상태와 액체상태의 입자의 혼합물로 배출되며 화학반응 또는 자연적으로 생성된다. PM2.5는 입자가 미세하여 코 점막을 통해 걸러지지 않고 흡입시 폐포까지 직접 침투하여 천식이나 폐질환의 유병률과 조기사망률을 증가시킨다. 또한 미세먼지는 시정을 악화시키고, 식물의 잎 표면에 침적되어 신진대사를 방해하며, 건축물이나 유적물 및 동상 등에 퇴적되어 부식을 일으킨다.</string>
    <string name="airq_question_pm10">초미세먼지는 미세먼지의 4분의 1크기밖에 되지 않는 아주 작은 먼지로, 사람의 눈에는 거의 보이지 않는다. 미세먼지와 마찬가지로 자동차나 화석연료에서 발생한다. 미세먼지보다 훨씬 작기 때문에 기도에서 걸러지지 못하고 대부분 폐포까지 침투해 심장질환과 호흡기 질병 등을 일으킨다.
</string>
    <string name="airq_question_co">혈액순환 중에서 산소운반 역할을 하는 헤모글로빈을 카르복실헤모글로빈(COHb)으로 변성시켜 산소의 운반기능을 저하시키며, 고농도의 일산화탄소는 유독성이 있어 건강한 사람에게도 치명적인 해를 입힌다.</string>
    <string name="airq_question_so2">고농도의 아황산가스는 옥외 활동이 많고 천식에 걸린 어른과 어린이에게 일시적으로 호흡장애를 일으킬 수 있으며, 고농도에 폭로될 경우 호흡기계 질환을 일으키고 심장혈관 질환을 악화시키는 것으로 알려져 있다.
질소산화물과 함께 산성비의 주요원인 물질로 토양등의 산성화에 영향을 미치고 바람에 의해 장거리 수송되어 다른 지역에 영향을 주며 식물의 잎맥손상 등을 일으키고 시정장애를 일으키며 각종 구조물의 부식을 촉진시킨다.</string>
    <string name="airq_question_no2">고농도에 노출되면 눈, 코 등의 점막에서 만성 기관지염, 폐렴, 폐출혈, 폐수종의 발병으로까지 발전할 수 있는 것으로 보고되고 있으며, 식물에 대한 피해로는 식물세포를 파괴하여 꽃식물의 잎에 갈색이나 흑갈색의 반점이 생기게 한다.
</string>
    <string name="airq_question_o3">오존에 반복 노출시에는 폐에 피해를 줄 수 있는데, 가슴의 통증, 기침, 메스꺼움, 목 자극, 소화 등에 영향을 미치며, 기관지염, 심장질환, 폐기종 및 천식을 악화시키고, 폐활량을 감소 시킬 수 있다. 특히 기관지 천식환자나 호흡기 질환자, 어린이, 노약자 등에게는 많은 영향을 미치므로 주의해야 할 필요가 있다. 또한 농작물과 식물에 직접적으로 영향을 미쳐 수확량이 감소되기도 하며 잎이 말라 죽기도 한다.
</string>
    <string name="open_source_license">오픈소스 라이선스</string>
    <string name="data_usages">개인정보 처리방침</string>
    <string name="term_of_services">이용약관</string>
    <string name="customers_center">고객 센터</string>
    <string name="live_temp">현재온도</string>
    <string name="sens_temp">체감온도</string>
    <string name="cancel">취소</string>
    <string name="daily_today">오늘</string>
    <string name="daily_tomorrow">내일</string>
    <string name="daily_next_tomorrow">모레</string>
    <string name="delete">삭제</string>
    <string name="add">추가</string>
    <string name="no_result">검색된 주소가 없습니다</string>
    <string name="edit">편집</string>
    <string name="searched_address">등록된 주소</string>
    <string name="current_address">현재 주소</string>
    <string name="login_with_kakao">카카오 로그인</string>
    <string name="login_with_google">구글 로그인</string>
    <string name="want_logout">로그아웃 하시겠습니까?</string>
    <string name="login_with_naver">네이버 로그인</string>
    <string name="data_call_error">데이터를 불러올 수 없습니다</string>
    <string name="gps_call_error">GPS가 비활성화 되어있습니다.\n활성화 하거나 주소를 등록하세요</string>
    <string name="address_call_error">주소 호출 실패</string>
    <string name="network_error">네트워크 확인 후 갱신필요</string>
    <string name="timeout_error">요청시간 지연, 재 갱신 필요</string>
    <string name="api_call_error">데이터 호출에 실패했습니다</string>
    <string name="unknown_error">알수없는 오류 발생</string>
    <string name="humidity">습도</string>
    <string name="wind">바람</string>
    <string name="rainPer">강수확률</string>
    <string name="pm2.5_full">초미세먼지</string>
    <string name="pm10_full">미세먼지</string>
    <string name="o3_full">오존</string>
    <string name="so2_full">아황산가스</string>
    <string name="no2_full">이산화질소</string>
    <string name="co_full">일산화탄소</string>
    <string name="add_new_address">새 주소를 등록하세요</string>
    <string name="input_address">주소를 입력해주세요</string>
    <string name="last_software">최신 소프트웨어입니다.</string>
    <string name="not_latest_version">최신 버전이 있습니다</string>
    <string name="not_latest_go_to_store">최신 버전 설치가 필요합니다\n스토어로 이동하시겠습니까?</string>
    <string name="fail_to_get_version">앱 정보를 불러오는데 실패했습니다</string>
    <string name="list_of_open_source">오픈소스 라이센스 목록</string>
    <string name="good">좋음</string>
    <string name="normal">보통</string>
    <string name="bad">나쁨</string>
    <string name="worst">매우나쁨</string>
    <string name="error">에러</string>
    <string name="perm_self_msg"><![CDATA[실시간 위치 권한 설정\n앱이 동작중이 아닐 때도 위치를 갱신합니다]]></string>
    <string name="noti_always_can"><![CDATA[알림은 앱 설정 -> 알림 항목에서 언제든 허용하실 수 있습니다.]]></string>
    <string name="noti_setting_enable">알림 설정\n날씨 알림 및 이벤트 정보 제공</string>
    <string name="vibrate_setting">진동 설정</string>
    <string name="noti_sound_setting">소리 설정</string>
    <string name="notification_explain_text">기본 알림은 하루 총 2회 순차적으로 발송됩니다.\n(오전은 07시 이후, 오후는 18시 이후)\n\n실시간 위치 권한이 허용되지 않은 경우\n마지막으로 앱에 접속한 위치로 알림이 발송됩니다.</string>
    <string name="allowed">허용됨</string>
    <string name="perm_back_setting">실시간 위치 사용\n앱이 동작중이 아닐 때도 위치를 갱신합니다</string>
    <string name="do_allow">허용하기</string>
    <string name="always_allowed">항상 허용</string>
    <string name="error_not_service_locale">서비스 가능 지역이 아니라 기본 주소로 불러옵니다</string>
    <string name="error_server_down">현재 서버가 점검중입니다.</string>
    <string name="error_network_connect">인터넷 연결 상태를 확인 후 재실행 해주세요</string>
    <string name="download">다운로드</string>
    <string name="customer_call_title">에어시그널 고객센터</string>
    <string name="email">이메일</string>
    <string name="home_page">홈페이지</string>
    <string name="data_api_license">위 화면에서 보여지는 데이터는 에어코리아, 기상청, 한국천문연구원에서 제공받아 사용됩니다.</string>
    <string name="phone_airsignal">070–4912–9321</string>
    <string name="no_result_notice">공지사항이 없습니다</string>
    <string name="loc_caution_title">위치 권한은 꼭 필요해요</string>
    <string name="loc_caution_explain">현재 디바이스의 위치를 측정하고 해당 위치에\n 기반한 실시간 날씨 정보를 불러오기 위해 사용합니다</string>
    <string name="update">업데이트</string>
    <string name="max">최고</string>
    <string name="min">최저</string>
    <string name="warning_title">기상 특보</string>
    <string name="renew_data">다시 불러오기</string>
    <string name="enable_gps">GPS 활성화</string>
    <string name="register_new_address">주소 등록</string>
    <string name="cd_ad_cancel">광고 숨기기</string>
    <string name="cd_icon_cancel">닫기</string>
    <string name="cd_icon_plus">등록</string>
    <string name="cd_icon_gps_fix">현재주소로 갱신</string>
    <string name="cd_img_more">더 보기 아이콘</string>
    <string name="cd_text_more">더 보기 텍스트</string>
    <string name="cd_img_location">주소</string>
    <string name="cd_icon_help">도움말</string>
    <string name="cd_icon_up">스크롤 최상단</string>
    <string name="cd_icon_side_menu">메뉴</string>
    <string name="cd_icon_refresh_data">데이터 갱신</string>
    <string name="cd_img_sky">현재 날씨</string>
    <string name="cd_img_star">밤 하늘의 별</string>
    <string name="cd_img_sun_rise">일출</string>
    <string name="cd_img_sun_set">일몰</string>
    <string name="cd_icon_location">위치 권한</string>
    <string name="cd_icon_noti">알림 권한</string>
    <string name="cd_login_platform">프로필 이미지</string>
    <string name="cd_customer_service_img">고객센터 아이콘</string>
    <string name="cd_airq_graph">공기질 범주</string>
    <string name="cd_icon_location_shadow">위치 권한 그림자</string>
    <string name="cd_list_item">리스트 항목</string>
    <string name="agree">동의</string>
    <string name="first_perm_title">현재 위치정보 사용 동의</string>
    <string name="first_perm_tr1">현재 위치의 날씨 정보를 제공하기 위해 위치 정보를 수집하여 사용합니다.</string>
    <string name="first_perm_tr2">보다 정확한 위치의 알림을 발신하기 위해 앱을 사용하지 않을 때도 위치 정보가 정기적으로 처리됩니다.</string>
    <string name="first_perm_tr3">앱 사용을 위해 \'동의\' 버튼을 눌러 위치 정보 처리에 동의해주세요.</string>
    <string name="first_perm_tr4">날씨 앱 설정 혹은 앱 위치 권한에서 위치 정보 수집 및 사용을 중지할 수 있습니다.</string>
    <string name="cd_icon_back">뒤로가기</string>
    <string name="noise">소음</string>
    <string name="device_alias">기기명</string>
    <string name="noti_option">알림 설정</string>
    <string name="device_serial_number">제품 시리얼 번호</string>
    <string name="wifi">Wi-Fi</string>
    <string name="eye_add_group">그룹 추가</string>
    <string name="change_group_name">그룹명 변경</string>
    <string name="remove_group">그룹 삭제</string>
    <string name="eye_noti_title">알림 설정</string>
    <string name="eye_noti_enable">알림 받기</string>
    <string name="eye_noti_gyro">진동 감지</string>
    <string name="eye_noti_test">테스트 알림 받기</string>
    <string name="manage_members">멤버 관리</string>
    <string name="model_name">모델명</string>
    <string name="setup_date">설치 날짜</string>
    <string name="delete_device">기기 삭제</string>
</resources>