<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/customerTopBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/customerBack"
            style="@style/BasicImageButtonIcon"
            android:layout_marginStart="20dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/cd_icon_back"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/back_arrow"
            app:tint="@color/theme_text_color"/>

        <TextView
            style="@style/basicMediumTextView"
            android:layout_centerInParent="true"
            android:text="@string/customers_center"
            android:textColor="@color/theme_text_color"
            android:textSize="16sp" />
    </RelativeLayout>

    <app.airsignal.weather.view.custom_view.CustomerServiceView
        android:id="@+id/customerCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:customerTitle="@string/customer_call_title"
        app:customerValue="@string/phone_airsignal"
        app:layout_constraintTop_toBottomOf="@+id/customerTopBar"/>

    <app.airsignal.weather.view.custom_view.CustomerServiceView
        android:id="@+id/customerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:customerTitle="@string/email"
        app:customerValue="play@airsignal.kr"
        app:layout_constraintTop_toBottomOf="@id/customerCall"/>

    <app.airsignal.weather.view.custom_view.CustomerServiceView
        android:id="@+id/customerHomePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:customerTitle="@string/home_page"
        app:customerValue="www.airsignal.kr"
        app:layout_constraintTop_toBottomOf="@id/customerEmail"/>

</androidx.constraintlayout.widget.ConstraintLayout>