<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/ae_bg_color">

    <ImageView
        android:id="@+id/dialogEyeSettingBack"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_icon_back"
        android:src="@drawable/back_arrow"
        app:tint="@color/main_black" />

    <TextView
        android:id="@+id/dialogEyeSettingTitle"
        style="@style/basicMediumTextView"
        android:textColor="@color/main_black"
        android:textSize="16sp"
        android:text="@string/eye_noti_title"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/dialogEyeSettingBack"
        android:layout_alignBottom="@+id/dialogEyeSettingBack"/>

    <app.airsignal.weather.as_eye.customview.EyeSettingView
        android:id="@+id/dialogEyeSettingToggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isToggle="true"
        app:isArrow="false"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/dialogEyeSettingBack"
        app:settingLeft="@string/eye_noti_enable"/>

    <app.airsignal.weather.as_eye.customview.EyeSettingView
        android:id="@+id/dialogEyeSettingNoise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isToggle="false"
        app:isArrow="true"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_below="@+id/dialogEyeSettingToggle"
        app:settingLeft="@string/noise"/>

    <app.airsignal.weather.as_eye.customview.EyeSettingView
        android:id="@+id/dialogEyeSettingGyro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isToggle="false"
        app:isArrow="true"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_below="@+id/dialogEyeSettingNoise"
        app:settingLeft="@string/eye_noti_gyro"/>
    
    <app.airsignal.weather.as_eye.customview.EyeSettingView
        android:id="@+id/dialogEyeSettingBetaNoti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isToggle="false"
        android:textSize="16sp"
        app:isArrow="false"
        app:settingLeft="@string/eye_noti_test"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_below="@+id/dialogEyeSettingGyro"/>

</RelativeLayout>