<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:overScrollMode="ifContentScrolls"
        android:clipToPadding="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".as_eye.fragment.EyeSettingFragment"
            android:background="@color/ae_bg_color"
            android:id="@+id/aeSettingViewParent">

            <app.airsignal.weather.as_eye.customview.EyeSettingView
                android:id="@+id/aeSettingName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="?android:attr/selectableItemBackground"
                app:isArrow="true"
                app:isToggle="false"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:settingLeft="@string/device_alias" />

            <app.airsignal.weather.as_eye.customview.EyeSettingView
                android:id="@+id/aeSettingNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                app:isArrow="true"
                app:isToggle="false"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/aeSettingName"
                app:settingLeft="@string/noti_option" />

            <app.airsignal.weather.as_eye.customview.EyeSettingView
                android:id="@+id/aeSettingMembers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isArrow="true"
                app:isToggle="false"
                android:textSize="16sp"
                android:background="?android:attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/aeSettingNotification"
                app:settingLeft="@string/manage_members" />

            <app.airsignal.weather.as_eye.customview.EyeSettingView
                android:id="@+id/aeSettingModelName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isArrow="false"
                app:isToggle="false"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/aeSettingMembers"
                app:settingLeft="@string/model_name" />

            <app.airsignal.weather.as_eye.customview.EyeSettingView
                android:id="@+id/aeSettingSerial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isArrow="false"
                app:isToggle="false"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/aeSettingModelName"
                app:settingLeft="@string/device_serial_number" />

            <app.airsignal.weather.as_eye.customview.EyeSettingView
                android:id="@+id/aeSettingWifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isArrow="false"
                app:isToggle="false"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/aeSettingSerial"
                app:settingLeft="@string/wifi" />

            <app.airsignal.weather.as_eye.customview.EyeSettingView
                android:id="@+id/aeSettingSetupDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isArrow="false"
                app:isToggle="false"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/aeSettingWifi"
                app:settingLeft="@string/setup_date" />

            <app.airsignal.weather.as_eye.customview.EyeSettingView
                android:id="@+id/aeSettingDeleteDevice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isArrow="false"
                app:isToggle="false"
                android:textSize="16sp"
                android:background="?android:attr/selectableItemBackground"
                app:layout_constraintTop_toBottomOf="@id/aeSettingSetupDate"
                app:settingLeft="@string/delete_device" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>
