<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_gravity="bottom"
    android:layout_marginEnd="15dp"
    android:background="@drawable/loc_perm_bg">

    <ImageView
        android:id="@+id/firstPermLocIcon"
        android:layout_width="35dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/cd_icon_location"
        android:src="@drawable/ico_gps_big" />

    <TextView
        android:id="@+id/firstPermTitle"
        style="@style/basicMediumTextView"
        android:layout_below="@+id/firstPermLocIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:lineHeight="24dp"
        android:text="@string/first_perm_title"
        android:textColor="@color/theme_text_color"
        android:textSize="20sp" />

    <TableRow
        android:id="@+id/firstPermTr1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstPermTitle"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="24dp"
        android:gravity="start">

        <ImageView
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:layout_gravity="top"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/cd_list_item"
            android:src="@drawable/dot"
            app:tint="@color/theme_sub_color" />

        <TextView
            style="@style/basicTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="start"
            android:lineHeight="20dp"
            android:text="@string/first_perm_tr1"
            android:textSize="14sp" />
    </TableRow>

    <TableRow
        android:id="@+id/firstPermTr2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstPermTr1"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:gravity="start">

        <ImageView
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:layout_gravity="top"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/cd_list_item"
            android:src="@drawable/dot"
            app:tint="@color/theme_sub_color" />

        <TextView
            style="@style/basicTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="start"
            android:lineHeight="20dp"
            android:text="@string/first_perm_tr2"
            android:textSize="14sp" />
    </TableRow>

    <TableRow
        android:id="@+id/firstPermTr3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstPermTr2"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:gravity="start">

        <ImageView
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:layout_gravity="top"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/cd_list_item"
            android:src="@drawable/dot"
            app:tint="@color/theme_sub_color" />

        <TextView
            style="@style/basicTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="start"
            android:lineHeight="20dp"
            android:text="@string/first_perm_tr3"
            android:textSize="14sp" />
    </TableRow>

    <TableRow
        android:id="@+id/firstPermTr4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstPermTr3"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:gravity="start">

        <ImageView
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:layout_gravity="top"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/cd_list_item"
            android:src="@drawable/dot"
            app:tint="@color/theme_sub_color" />

        <TextView
            style="@style/basicTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="start"
            android:lineHeight="20dp"
            android:text="@string/first_perm_tr4"
            android:textSize="14sp" />
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstPermTr4"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="36dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/firstPermCancelBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="0.5"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="10dp"
            android:textAllCaps="false"
            android:fontFamily="@font/spoqa_hansansneo_medium"
            android:textColor="@color/cancel_color"
            android:background="@drawable/double_btn_cancel_bg"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/firstPermApplyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:layout_weight="0.5"
            android:autoSizeMaxTextSize="18sp"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="12sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/spoqa_hansansneo_medium"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/back_perm_apply_btn_bg"/>
    </TableRow>
</RelativeLayout>