<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:weightSum="0.9"
    android:gravity="center"
    android:background="@drawable/ae_device_bg_e">

    <app.airsignal.weather.as_eye.customview.EyeGroupSelectorView
        android:id="@+id/dialogAddGroupAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:selectorTitle="@string/eye_add_group"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="12dp"
        android:layout_weight="0.3"/>

    <app.airsignal.weather.as_eye.customview.EyeGroupSelectorView
        android:id="@+id/dialogAddGroupEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:selectorTitle="@string/change_group_name"
        android:gravity="center"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_weight="0.3"/>

    <app.airsignal.weather.as_eye.customview.EyeGroupSelectorView
        android:id="@+id/dialogAddGroupDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:selectorTitle="@string/remove_group"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="18dp"
        android:layout_weight="0.3"/>

</LinearLayout>